--- a/PostSafety/PostSafety/Storyboards/Admin.storyboard
+++ b/PostSafety/PostSafety/Storyboards/Admin.storyboard
@@ -1688,30 +1688,30 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="142"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yoG-mH-cRG">
-                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="1"/>
-                                                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ABS-Kc-nWC" userLabel="Bottom Border">
+                                                    <rect key="frame" x="0.0" y="141" width="375" height="1"/>
+                                                    <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="1" id="fjO-5Z-PxB"/>
+                                                        <constraint firstAttribute="height" constant="1" id="19X-no-Xbf"/>
                                                     </constraints>
                                                 </view>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10:45am" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cx6-B3-dbU">
-                                                    <rect key="frame" x="8" y="59" width="82.5" height="24"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10:45 AM" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cx6-B3-dbU">
+                                                    <rect key="frame" x="8" y="59" width="90" height="24"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="82.5" id="hhY-2c-oAw"/>
+                                                        <constraint firstAttribute="width" constant="90" id="hhY-2c-oAw"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="New Protocol for Near Miss Reports" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E0Z-IV-edc">
-                                                    <rect key="frame" x="99" y="37.5" width="268" height="67"/>
+                                                    <rect key="frame" x="106.5" y="37.5" width="260.5" height="67"/>
                                                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="28"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="January 18th, 2018" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1OR-gD-hdy">
-                                                    <rect key="frame" x="99" y="104.5" width="108" height="14.5"/>
+                                                    <rect key="frame" x="106.5" y="104.5" width="108" height="14.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -1719,16 +1719,16 @@
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
+                                                <constraint firstItem="ABS-Kc-nWC" firstAttribute="leading" secondItem="nuY-EH-pGA" secondAttribute="leading" id="9Lq-qb-gkT"/>
+                                                <constraint firstAttribute="trailing" secondItem="ABS-Kc-nWC" secondAttribute="trailing" id="GMO-cu-El0"/>
                                                 <constraint firstItem="E0Z-IV-edc" firstAttribute="centerY" secondItem="nuY-EH-pGA" secondAttribute="centerY" id="H6e-wQ-IBU"/>
                                                 <constraint firstItem="Cx6-B3-dbU" firstAttribute="centerY" secondItem="nuY-EH-pGA" secondAttribute="centerY" id="KQV-CX-Tkx"/>
                                                 <constraint firstItem="Cx6-B3-dbU" firstAttribute="leading" secondItem="nuY-EH-pGA" secondAttribute="leading" constant="8" id="PC6-fE-v1g"/>
                                                 <constraint firstItem="1OR-gD-hdy" firstAttribute="top" secondItem="E0Z-IV-edc" secondAttribute="bottom" id="Y3a-Fk-23l"/>
                                                 <constraint firstItem="E0Z-IV-edc" firstAttribute="leading" secondItem="Cx6-B3-dbU" secondAttribute="trailing" constant="8" id="gVr-k4-oma"/>
                                                 <constraint firstAttribute="trailing" secondItem="E0Z-IV-edc" secondAttribute="trailing" constant="8" id="iTo-GS-Ilg"/>
-                                                <constraint firstItem="yoG-mH-cRG" firstAttribute="leading" secondItem="nuY-EH-pGA" secondAttribute="leading" id="r12-iG-qEK"/>
-                                                <constraint firstAttribute="trailing" secondItem="yoG-mH-cRG" secondAttribute="trailing" id="r9J-Rr-VVj"/>
+                                                <constraint firstAttribute="bottom" secondItem="ABS-Kc-nWC" secondAttribute="bottom" id="rhZ-Gh-Rsk"/>
                                                 <constraint firstItem="1OR-gD-hdy" firstAttribute="leading" secondItem="E0Z-IV-edc" secondAttribute="leading" id="vBB-m5-MqQ"/>
-                                                <constraint firstItem="yoG-mH-cRG" firstAttribute="top" secondItem="nuY-EH-pGA" secondAttribute="top" id="zsV-EO-yfT"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -1769,6 +1769,13 @@
                                     <constraint firstItem="kxf-Ri-Jbg" firstAttribute="top" secondItem="fID-td-FqQ" secondAttribute="top" constant="20" id="etq-3v-bfB"/>
                                 </constraints>
                             </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ASy-OA-VrD">
+                                <rect key="frame" x="0.0" y="126" width="375" height="1"/>
+                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="1" id="pkm-rc-Rwd"/>
+                                </constraints>
+                            </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ue1-U8-sZb">
                                 <rect key="frame" x="0.0" y="20" width="44" height="44"/>
                                 <constraints>
@@ -1789,9 +1796,12 @@
                         <constraints>
                             <constraint firstItem="fID-td-FqQ" firstAttribute="leading" secondItem="IEL-yx-qnz" secondAttribute="leading" id="1Da-o4-1vx"/>
                             <constraint firstItem="IEL-yx-qnz" firstAttribute="bottom" secondItem="2cK-zM-Iax" secondAttribute="bottom" id="3ns-1b-Pwl"/>
+                            <constraint firstItem="ASy-OA-VrD" firstAttribute="leading" secondItem="2cK-zM-Iax" secondAttribute="leading" id="8GU-gY-2qA"/>
                             <constraint firstItem="ue1-U8-sZb" firstAttribute="leading" secondItem="fID-td-FqQ" secondAttribute="leading" id="Oqy-HQ-Bgt"/>
                             <constraint firstItem="Kyz-6e-YnA" firstAttribute="top" secondItem="fID-td-FqQ" secondAttribute="bottom" constant="16" id="Q6D-9N-PwI"/>
                             <constraint firstItem="fID-td-FqQ" firstAttribute="top" secondItem="hQ6-CC-bmz" secondAttribute="top" id="Q9C-Ie-NiY"/>
+                            <constraint firstItem="ASy-OA-VrD" firstAttribute="top" secondItem="2cK-zM-Iax" secondAttribute="top" id="Wt0-R5-wYp"/>
+                            <constraint firstItem="ASy-OA-VrD" firstAttribute="trailing" secondItem="2cK-zM-Iax" secondAttribute="trailing" id="cBt-Gz-MiQ"/>
                             <constraint firstItem="Kyz-6e-YnA" firstAttribute="centerX" secondItem="hQ6-CC-bmz" secondAttribute="centerX" id="dho-47-da4"/>
                             <constraint firstItem="fID-td-FqQ" firstAttribute="trailing" secondItem="IEL-yx-qnz" secondAttribute="trailing" id="n9X-ym-c6W"/>
                             <constraint firstItem="2cK-zM-Iax" firstAttribute="trailing" secondItem="IEL-yx-qnz" secondAttribute="trailing" id="nFk-dT-XIG"/>
