--- a/PostSafety/PostSafety/Storyboards/Admin.storyboard
+++ b/PostSafety/PostSafety/Storyboards/Admin.storyboard
@@ -408,11 +408,12 @@
                                         </connections>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oTn-z3-rSN">
-                                        <rect key="frame" x="15.5" y="200" width="345.5" height="266.5"/>
+                                        <rect key="frame" x="19.5" y="200" width="337.5" height="266.5"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fSe-fx-DDF">
-                                                <rect key="frame" x="34.5" y="66.5" width="276.5" height="39.5"/>
+                                                <rect key="frame" x="0.0" y="46" width="337.5" height="53"/>
                                                 <color key="backgroundColor" red="1" green="0.29411764709999999" blue="0.0039215686269999999" alpha="1" colorSpace="calibratedRGB"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                                 <state key="normal" title="Send Alert">
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
@@ -429,8 +430,9 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Je1-7v-mc1">
-                                                <rect key="frame" x="34.5" y="113.5" width="276.5" height="39.5"/>
+                                                <rect key="frame" x="0.0" y="106.5" width="337.5" height="53.5"/>
                                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                                 <state key="normal" title="Share Post">
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
@@ -447,12 +449,13 @@
                                                 </connections>
                                             </button>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bfS-Xr-Q26">
-                                                <rect key="frame" x="34.5" y="159" width="276.5" height="40"/>
+                                                <rect key="frame" x="0.0" y="166" width="337.5" height="53.5"/>
                                                 <color key="backgroundColor" red="1" green="0.29411764709999999" blue="0.0039215686269999999" alpha="1" colorSpace="calibratedRGB"/>
                                             </view>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eAO-zg-zbM">
-                                                <rect key="frame" x="36" y="161" width="273.5" height="36.5"/>
+                                                <rect key="frame" x="1.5" y="168" width="334.5" height="50"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                                 <state key="normal" title="Close Post">
                                                     <color key="titleColor" red="1" green="0.29411764709999999" blue="0.0039215686269999999" alpha="1" colorSpace="calibratedRGB"/>
                                                 </state>
@@ -469,9 +472,9 @@
                                             <constraint firstItem="eAO-zg-zbM" firstAttribute="top" secondItem="Je1-7v-mc1" secondAttribute="bottom" constant="8" id="A9c-If-bGC"/>
                                             <constraint firstItem="bfS-Xr-Q26" firstAttribute="height" secondItem="Je1-7v-mc1" secondAttribute="height" id="LjT-PF-F1v"/>
                                             <constraint firstItem="eAO-zg-zbM" firstAttribute="width" secondItem="Je1-7v-mc1" secondAttribute="width" constant="-3" id="YKc-bx-Vhx"/>
-                                            <constraint firstItem="Je1-7v-mc1" firstAttribute="height" secondItem="oTn-z3-rSN" secondAttribute="height" multiplier="0.15" id="YY9-3J-937"/>
+                                            <constraint firstItem="Je1-7v-mc1" firstAttribute="height" secondItem="oTn-z3-rSN" secondAttribute="height" multiplier="0.2" id="YY9-3J-937"/>
                                             <constraint firstItem="eAO-zg-zbM" firstAttribute="centerX" secondItem="Je1-7v-mc1" secondAttribute="centerX" id="a78-c9-WOb"/>
-                                            <constraint firstItem="Je1-7v-mc1" firstAttribute="width" secondItem="oTn-z3-rSN" secondAttribute="width" multiplier="0.8" id="aTO-jt-5Uf"/>
+                                            <constraint firstItem="Je1-7v-mc1" firstAttribute="width" secondItem="oTn-z3-rSN" secondAttribute="width" id="aTO-jt-5Uf"/>
                                             <constraint firstItem="bfS-Xr-Q26" firstAttribute="centerX" secondItem="eAO-zg-zbM" secondAttribute="centerX" id="bYI-jO-zDD"/>
                                             <constraint firstItem="Je1-7v-mc1" firstAttribute="centerX" secondItem="oTn-z3-rSN" secondAttribute="centerX" id="eht-3g-PNn"/>
                                             <constraint firstItem="Je1-7v-mc1" firstAttribute="centerY" secondItem="oTn-z3-rSN" secondAttribute="centerY" id="fZl-l8-qsi"/>
@@ -485,7 +488,7 @@
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="oTn-z3-rSN" firstAttribute="height" secondItem="U10-rb-QJZ" secondAttribute="height" multiplier="0.4" id="ELo-ja-B3z"/>
-                                    <constraint firstItem="oTn-z3-rSN" firstAttribute="width" secondItem="U10-rb-QJZ" secondAttribute="width" multiplier="0.92" id="IKD-lW-WW3"/>
+                                    <constraint firstItem="oTn-z3-rSN" firstAttribute="width" secondItem="U10-rb-QJZ" secondAttribute="width" multiplier="0.9" id="IKD-lW-WW3"/>
                                     <constraint firstItem="oTn-z3-rSN" firstAttribute="centerX" secondItem="U10-rb-QJZ" secondAttribute="centerX" id="OwO-N2-CQe"/>
                                     <constraint firstItem="oTn-z3-rSN" firstAttribute="centerY" secondItem="U10-rb-QJZ" secondAttribute="centerY" id="QdH-uj-Lvf"/>
                                     <constraint firstItem="5OJ-Zq-yik" firstAttribute="top" secondItem="U10-rb-QJZ" secondAttribute="top" constant="20" id="byg-kh-Cnf"/>
